<resources>
    <string name="app_name">Food Ordering In</string>
    <string name="err_msg_email">Please Enter A Valid Email Id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailId">info@abhiandroid.com</string>
    <string name="contactNo">+91886028232</string>
    <string name="secure_payment_text"><![CDATA[Safe and Secure Payments. Easy returns <br />100% Authentic products]]></string>
    <string name="VerifcationPending">Verification pending</string>
    <string name="We">We already sent confirmation email. If you didn\'t receive please resend it by filling your email below.</string>
    <string name="Resendemail">Re-send mail</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign Up</string>
    <string name="ProductName">Product Name</string>
    <string name="EditExtra">Edit String</string>
    <string name="TotalPrice">Total Price</string>
    <string name="UpdateCart">Update Cart</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Enter">Enter your email id and we will send you an email to change the password</string>
    <string name="Submit">Submit</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="ForgotPassword">Forgot Password ?</string>
    <string name="OR">OR</string>
    <string name="SignUp">Sign Up</string>
    <string name="SkipLogin">Skip Login</string>
    <string name="OrderConfirmation">Order Confirmation</string>
    <string name="Thank">Thank you for placing your order with us.</string>
    <string name="Please">Please check your email for more details. For any questions and further information, please contact our customer support.</string>
    <string name="ContinueShopping">Continue Shopping</string>
    <string name="AddExtra">Add Extra</string>
    <string name="AddToCart">Add To Cart</string>
    <string name="Search">Search your food item...</string>
    <string name="Message">Message</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="TryAgain">Try Again</string>
    <string name="InternetConnectionNotAvailable">Internet Connection Not Available</string>
    <string name="Pay">Pay</string>
    <string name="Trump">Trump returns to white House from vacation at the end of a catastrophic week</string>
    <string name="Quanitity">2 Quanitity</string>
    <string name="Extra">4 Extra</string>
    <string name="dd">dd</string>
    <string name="Edit">Edit</string>
    <string name="PRICEDETAILS">PRICE DETAILS</string>
    <string name="Priceitems">Price (8 items)</string>
    <string name="Delivery">Delivery</string>
    <string name="Tax">Tax</string>
    <string name="AmountPayable">Amount Payable</string>
    <string name="Qty">Qty:</string>
    <string name="Price">Price:</string>
    <string name="Kg">1 Kg</string>
    <string name="Proceedtopayment">Proceed to payment</string>
    <string name="Your">Your cart is empty!</string>
    <string name="Add">Add items in your cart now.</string>
    <string name="OrderNow">Order Now</string>
    <string name="LoginFirst">Login First!</string>
    <string name="Loginfirst">Login first to view your cart</string>
    <string name="LoginNow">Login Now</string>
    <string name="NewhereSignUp">New here? Sign Up</string>
    <string name="Verificationispending">Verification is pending.</string>
    <string name="Pleaseverify">Please verify your email to view your cart.</string>
    <string name="VerifyNow">Verify Now</string>
    <string name="Fill">Fill address in your profile</string>
    <string name="AddNew">Add New Address</string>
    <string name="FullName">Full Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="City">City *</string>
    <string name="Locality">Locality, area or street *</string>
    <string name="Flatno">Flat no., Building name *</string>
    <string name="Pincode">Pincode *</string>
    <string name="State">State *</string>
    <string name="LandmarkOptional">Landmark(Optional)</string>
    <string name="Choose">Choose Payment Method</string>
    <string name="Pay1">Pay Using Debit Card/Net Banking/Wallet/UPI</string>
    <string name="CashOnDelivery">Cash On Delivery</string>
    <string name="Makepayment">Make payment</string>
    <string name="Pm">9Am - 11 Pm</string>
    <string name="OperatingHours">Operating Hours</string>
    <string name="ViewDistance">View Details</string>
    <string name="Fromyourplace">From your place</string>
    <string name="Taptonavigate">Tap to navigate</string>
    <string name="Taptocall">Tap to call</string>
    <string name="MoreDetails"><![CDATA[More Details >]]></string>
    <string name="Recommended">Recommended</string>
    <string name="Categories">Categories</string>
    <string name="ApplicationName">Application Name</string>
    <string name="TermsPrivacy">Terms, Privacy Policy and Disclaimer</string>
    <string name="Tap">Tap for more details</string>
    <string name="Copyright">Copyright</string>
    <string name="Copyrigh1t">Copyright 2017 AbhiAndroid\\nAll rights reserved</string>
    <string name="OrderId">Order Id :</string>
    <string name="OrderDate">Order Date :</string>
    <string name="TotalAmount">Total Amount :</string>
    <string name="PaymentMode">Payment Mode :</string>
    <string name="ShippingAddress">Shipping Address :</string>
    <string name="Status">Status :</string>
    <string name="OrderedProducts">Ordered Products:</string>
    <string name="ORDERPROCESSINGSTEPS">ORDER PROCESSING STEPS</string>
    <string name="Order">Order In Processing</string>
    <string name="OrderDispatched">Order Dispatched</string>
    <string name="OrderComplete">Order Complete</string>
    <string name="You">You haven\'t make any order yet!</string>
    <string name="Make">Make your first order now.</string>
    <string name="Loginfirsst">Login first to view your orders</string>
    <string name="LoginNoow">Login Now</string>
    <string name="Pleasee">Please verify your email to view your orders.</string>
    <string name="currently">Currently no food item added in this category. Please check back later.\"</string>
    <string name="Weprovide">We provide services in below pincode area only:</string>
    <string name="Taponpincodetocopyinstantly">(Tap on pincode to copy instantly)</string>
    <string name="Favorite">Favorite</string>
    <string name="Description">Description:</string>
    <string name="AboutUs">About Us:</string>
    <string name="Name">Name:</string>
    <string name="Boating">Boating ,Pg,cafeteria and ride the bull</string>
    <string name="Address">Address:</string>
    <string name="Near">Near rock garden ,sector 1 chandigarh</string>
    <string name="OpeningHours">Opening hours:</string>
    <string name="PhoneNumber">Phone Number:</string>
    <string name="Website">Website:</string>
    <string name="wwwabhiandroidcom">www.abhiandroid.com</string>
    <string name="MapandNavigation">Map and Navigation</string>
    <string name="VIEW">VIEW</string>
    <string name="NAVIGATE">NAVIGATE</string>
    <string name="KnowUsBetter">Know Us Better:</string>
    <string name="Yourr">Your favorite food list is empty!</string>
    <string name="Additemsinyourfavoritenow">Add items in your favorite now.</string>
    <string name="as">as</string>
    <string name="ViewOrderDetails">View Order Details</string>
    <string name="DateJan">Date: 01 Jan 2018</string>
    <string name="x">x1</string>
    <string name="ChooseGender">Choose Gender *</string>
    <string name="Logout">Logout</string>
    <string name="Update">Update</string>
    <string name="Flat">Flat no., Building name *</string>
<string name="mJSONURL_catlist">http://shivedic.in/JSON/pbyc.php </string>
    <string name="mJSONURL_recommproduct">http://shivedic.in/JSON/recom.php </string>
    <string name="mJSONURL_restaurantdetail">http://shivedic.in/JSON/resdetails.php </string>
    <string name="mJSONURL_FAQ">http://shivedic.in/JSON/faq.php </string>
    <string name="mJSONURL_terms">http://shivedic.in/JSON/terms.php </string>
    <string name="mJSONURL_pushaddr">http://shivedic.in/JSON/pushadd.php </string>
    <string name="mJSONURL_addwishlist">http://shivedic.in/JSON/addwishlist.php </string>
    <string name="mJSONURL_addcart">http://shivedic.in/JSON/add-cart.php </string>
    <string name="mJSONURL_deletecart">http://shivedic.in/JSON/deletecart.php </string>
    <string name="mJSONURL_wishcheck">http://shivedic.in/JSON/wishcheck.php </string>
    <string name="mJSONURL_wishlist">http://shivedic.in/JSON/wishlist.php </string>
    <string name="mJSONURL_viewordersdetails">http://shivedic.in/JSON/viewordersdetails.php </string>
    <string name="mJSONURL_viewcart">http://shivedic.in/JSON/viewcart.php </string>
    <string name="mJSONURL_userprofile">http://shivedic.in/JSON/userprofile.php </string>
    <string name="mJSONURL_updateprofile">http://shivedic.in/JSON/updateprofile.php </string>
    <string name="mJSONURL_resentmail">http://shivedic.in/JSON/resentmail.php </string>
    <string name="mJSONURL_login">http://shivedic.in/JSON/login.php </string>
    <string name="mJSONURL_addorders">http://shivedic.in/JSON/addorders.php </string>
    <string name="mJSONURL_forgot">http://shivedic.in/JSON/forgot.php </string>
    <string name="mJSONURL_register">http://shivedic.in/JSON/register.php </string>






    <string name="mJSONURL_product">http://shivedic.in/JSON/allitem.php </string>

</resources>
