<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.abhiandroid.foodorderingin.Activities.Login">

    <ImageView
        android:id="@+id/back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="10dp"
        android:tint="@color/light_black"
        android:src="@drawable/back_icon" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/food_app_logo1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Enter"
            android:textColor="@color/light_black"
            android:textSize="17sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/light_black">

            <EditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_black"
                android:hint="@string/EmailAddress"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:layout_gravity="center"
            android:text="@string/Submit"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>
